--- a/local.yml
+++ b/local.yml
@@ -3,8 +3,20 @@
   connection: local
   become: true
 
+  pre_task:
+  - name: update apt
+    become: true
+    apt:
+      force_apt_get: true
+      update_cache: true
+      state: present
+    tags:
+      - install
+      - core
+
   tasks:
   - name: install packages
     package:
       name:
         - htop
+        - tmux
