--- a/local.yml
+++ b/local.yml
@@ -13,5 +13,6 @@
       - install
       - core
   tasks:
+    - include: task/zsh.yml
     - include: tasks/productivity-tools.yml
     - include: tasks/nvim-setup.yml
