--- a/local.yml
+++ b/local.yml
@@ -15,4 +15,5 @@
   tasks:
     - include: tasks/zsh.yml
     - include: tasks/productivity-tools.yml
+    - include: tasks/dotfiles.yml
     - include: tasks/nvim-setup.yml
