added some libs

--- a/tasks/productivity-tools.yml
+++ b/tasks/productivity-tools.yml
@@ -5,3 +5,12 @@
   tags:
     - install
     - productivity
+
+- name: Install libs
+  become: true
+  apt:
+    name: [ "cmake", "pkg-config", "libfreetype6-dev", "libfontconfig1-dev", "libxcb-xfixes0-dev", "libxkbcommon-dev", "python3"]
+  tags:
+    - install
+    - productivity
+
