--- a/tasks/cargo.yml
+++ b/tasks/cargo.yml
@@ -1,5 +1,6 @@
-- name: Installing cargo crates
-  shell: /home/jquirky/.cargo/bin/cargo +stable install bat #du-dust ripgrep exa fd-find tokei procs
+- name: Run cargo crates script
+  become: true
+  script: ../scripts/cargo.sh
   tags:
     - install
     - cargo
