back to not script...

--- a/local.yml
+++ b/local.yml
@@ -15,7 +15,7 @@
   tasks:
     - include: tasks/zsh.yml
     - include: tasks/productivity-tools.yml
-    - include: tasks/cargo.yml
+      #- include: tasks/cargo.yml currently borken use the script
     - include: tasks/node.yml
     - include: tasks/dotfiles.yml
     - include: tasks/nvim-setup.yml
